# Backlog_builder

./: .env.example  .eslintignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURE_SUMMARY.md  README.md  SECURITY.md  api-test.html  deploy.sh  docker-compose.prod.yml  docker-compose.yml  postman-collection.json  requirements.txt  setup.sh  test-api-interactive.sh  test-api.sh  test-integration.sh  test-pipeline.sh  test_llm_service.py  test_local.py
ai-services/: .env.example  .env.production  Dockerfile.ai  Dockerfile.cpu
ai-services/llm-processing/: Dockerfile  Dockerfile.cloud  cloud-llm.js  conversation_analyzer.py  enhanced_service.py  huggingface-local.py  langchain_ticket_generator.py  package.json  prompt-templates.json  requirements.txt  simple_conversation_analyzer.py
ai-services/speech-to-text/: Dockerfile  Dockerfile.cloud  cloud-stt.js  package.json  pyproject.toml  requirements.txt  whisper-local.py
backend/: Dockerfile  package-lock.json  package.json
backend/src/: app.js
backend/src/controllers/: ai.controller.js  github.controller.js
backend/src/middleware/: fileValidation.js
backend/src/routes/: ai.routes.js  github.routes.js
backend/src/services/: aiAnalysis.js  githubService.js  speechToText.js  ticketGenerator.js
database/: init.sql
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  vite.config.js  vue.config.js
frontend/src/: App.vue  main.js  router.js
monitoring/: prometheus.yml
nginx/: nginx.conf
stt-service/: main.py  requirements.txt
(+16 files in other folders)
