[tool.poetry]
name = "whisper-stt-service"
version = "0.1.0"
description = "Local Whisper Speech-to-Text Service for Backlog Builder"
authors = ["Backlog Builder Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "whisper-local.py"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
whisper = "^1.1.10"
torch = "^2.0.1"
torchaudio = "^2.0.2"
librosa = "^0.10.1"
numpy = "^1.24.3"
soundfile = "^0.12.1"
pydantic = "^2.4.2"
python-multipart = "^0.0.6"
redis = "^5.0.1"
pyannote.audio = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
